test/examples/bad/val_separated_from_let.ml
(* val should only apply to immediately following let *)
val x : int
let y = 1
let x = 42
